# multiresolution

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt  compare_tests.bat  compare_tests.cmake  compare_tests.sh  config.cmake  config.template.txt  file.exists.cmake  mkgw.bat  mkvs.bat  params.template.txt  rmk-mingw.bat  rmk-msvs.bat  testing.cmake
CS/: CMakeLists.txt
CS/AutoCADMulti/: AutoCADMulti.csproj.template  main.cs  maindialog.Designer.cs  maindialog.cs  maindialog.resx  services.cs
CS/AutoCADMulti/Properties/: AssemblyInfo.cs
CS/AutoCADMultiGUI/: AutoCADMultiGUI.csproj.template  main.cs  maindialog.Designer.cs  maindialog.cs
CS/AutoCADMultiGUI/Properties/: AssemblyInfo.cs
CS/MultiSlicerInterface/: MultiSlicerInterface.csproj.template  interface.cs
CS/MultiSlicerInterface/Properties/: AssemblyInfo.cs
apps/: app.cpp  app.hpp  apputil.hpp  dxf.cpp  filter.cpp  filterz.cpp  info.cpp  measureTime.hpp  nanoscribe.cpp  slicermanager.cpp  slicermanager.hpp  splitter.cpp  standalone.cpp  svg.cpp  touch.cpp  transform.cpp  union.cpp  xyz.cpp
interfaces/: parsing.cpp  parsing.hpp  pathsfile.cpp  pathsfile.hpp  pathwriter.cpp  pathwriter.hpp  pathwriter_dxf.cpp  pathwriter_dxf.hpp  pathwriter_multifile.cpp  pathwriter_multifile.hpp  pathwriter_multifile.tpp  pathwriter_nanoscribe.cpp  pathwriter_nanoscribe.hpp  simpleparsing.cpp  simpleparsing.hpp  slicermanager.cpp  slicermanager.hpp  subprocess.cpp  subprocess.hpp
multi/: 3d.cpp  3d.hpp  auxgeom.cpp  auxgeom.hpp  config.cpp  config.hpp  medialaxis.cpp  medialaxis.hpp  motionPlanner.cpp  motionPlanner.hpp  multislicer.cpp  multislicer.hpp  orientPaths.cpp  orientPaths.hpp  pathsplitter.cpp  pathsplitter.hpp  serialization.hpp  snapToGrid.cpp  snapToGrid.hpp  spec.cpp  spec.hpp
python/: showcontours.cpp  showcontours.hpp  sliceviewer.cpp  sliceviewer.hpp
shared/: multiresolution.cpp  multiresolution.h
standalone/: slicermanager.cpp  standalone.cpp
